#357 fix make some test a module