@@ -49,12 +49,6 @@
 			<classifier>${jar.classifier}</classifier>
 		</dependency>
 		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.9.4</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.simpleflatmapper</groupId>
 			<artifactId>sfm-test</artifactId>
 			<version>3.2-SNAPSHOT</version>
@@ -267,6 +261,33 @@
 					<scope>provided</scope>
 				</dependency>
 			</dependencies>
+
+			<build>
+				<plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+
+                        <executions>
+                            <execution>
+                                <id>default-testCompile</id>
+                                <phase>test-compile</phase>
+                                <configuration>
+									<fork>true</fork>
+									<compilerArgs>
+										<arg>--add-exports</arg>
+										<arg>org.simpleflatmapper.reflect/org.simpleflatmapper.reflect.impl=org.simpleflatmapper.reflect.test</arg>
+									</compilerArgs>
+                                </configuration>
+                                <goals>
+                                    <goal>testCompile</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+				</plugins>
+
+			</build>
 
 		</profile>
 
